<resources>
    <string name="app_name">Tomato</string>

    <string name="home">首页</string>

    <!--抽屉-->
    <string name="openString">打开</string>
    <string name="closeString">关闭</string>
    <string name="drawer_nick_name">Andy Lau</string>
    <string name="drawer_desc">做一稞低头的麦穗，饱满而谦逊！</string>
    <string name="drawer_add_todo">添加任务</string>
    <string name="drawer_share">分享</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_study_data">学习数据</string>
    <string name="drawer_group_title_other">其他</string>
    <string name="drawer_dress_up">设置主题颜色</string>
    <string name="drawer_service">客服</string>
    <string name="drawer_problem">常见问题</string>
    <string name="drawer_mode_night">夜间</string>
</resources>
