<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add"
            android:icon="@mipmap/drawer_add"
            android:title="@string/drawer_add_todo" />
        <item
            android:id="@+id/share"
            android:icon="@mipmap/drawer_share"
            android:title="@string/drawer_share" />

        <item
            android:id="@+id/setting"
            android:icon="@mipmap/drawer_setting"
            android:title="@string/drawer_setting" />

        <item
            android:id="@+id/study_data"
            android:icon="@mipmap/drawer_study_data"
            android:title="@string/drawer_study_data" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/other"
            android:title="@string/drawer_group_title_other">
            <menu>
                <item
                    android:id="@+id/dress_up"
                    android:icon="@mipmap/drawer_dress_up"
                    android:title="@string/drawer_dress_up" />
                <item
                    android:id="@+id/service"
                    android:icon="@mipmap/drawer_service"
                    android:title="@string/drawer_service" />
                <item
                    android:id="@+id/problem"
                    android:icon="@mipmap/drawer_problem"
                    android:title="@string/drawer_problem" />
            </menu>
        </item>
    </group>
</menu>